--- a/README.Rmd
+++ b/README.Rmd
@@ -1,11 +1,7 @@
 ---
 title: "Diseño e implementacion de experimentos en ciencias sociales"
 output:
-  html_document:
-    self_contained: false
-    theme: lumen
-  output_file: index.html
-  
+  github_document:
 ---
 
 
@@ -13,7 +9,7 @@ output:
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  fig.path = "man/figures/index-",
+  fig.path = "man/figures/README-",
   out.width = "100%"
 )
 ```
