--- a/README.Rmd
+++ b/README.Rmd
@@ -44,7 +44,7 @@ knitr::opts_chunk$set(
 
 Este curso abarca el diseño, la realización y el análisis de experimentos en ciencias sociales. Revisa los experimentos de campo, experimentos naturales, de encuesta y de laboratorio.
 
-El programa del curso esta [acá](https://github.com/Nicolas-Schmidt/CursoExperimentos/blob/master/Programa/Programa2023.pdf).
+El programa del curso esta [acá](https://drive.google.com/file/d/1LoqrzsCgzLVk5mwedZIQ1jkhL866mjhF/view?usp=sharing).
 
 ## Objetivos deaprendizaje:
 
@@ -73,6 +73,8 @@ for (i in 1:filas) {
 
 #### Materiales del Curso
 
+
+
 ```{r, results='asis', echo=FALSE}
 
 datos <- rio::import("Clases.xlsx")
@@ -87,3 +89,5 @@ for (i in 1:filas) {
 }
 
 ```
+
+###### *Actulización: `r Sys.time()`
