--- a/README.Rmd
+++ b/README.Rmd
@@ -47,7 +47,7 @@ knitr::opts_chunk$set(
 
 Este curso abarca el diseño, la realización y el análisis de experimentos en ciencias sociales. Revisa los experimentos de campo, experimentos naturales, de encuesta y de laboratorio.
 
-El programa del curso está disponible [aquí](https://drive.google.com/u/0/uc?id=15pJsNz39t-EHyQn7jl75tWN-rmQBdm1c&export=download).
+El programa del curso está disponible [aquí](https://drive.google.com/u/0/uc?id=1P7wshzrPodf2tfPWMIRXo6YsI3zh0dMn&export=download).
 
 ## Objetivos deaprendizaje:
 
@@ -58,7 +58,7 @@ El programa del curso está disponible [aquí](https://drive.google.com/u/0/uc?i
 -   Cómo diseñar un experimento y preparar un pre-registro completo
 
 
-### Bibliografía básica (por orden de importancia para el curso): 
+### Bibliografía general 
 
 Gerber, Alan S., and Donald P. Green. 2012. *Field Experiments: Design, Analysis, and Interpretation.* New York: W.W. Norton. (FEDAI).
 
