--- a/README.Rmd
+++ b/README.Rmd
@@ -2,89 +2,136 @@
 output: github_document
 ---
 
-## Diseño e implementacion de experimentos en ciencias sociales
+<div class="navbar">
+  <a href="#informacion-general">Información General</a>
+  <a href="#descripcion">Descripción</a>
+  <a href="#programa">Programa</a>
+  <a href="#objetivos">Objetivos</a>
+  <a href="#bibliografia">Bibliografía</a>
+  <a href="#cronograma">Cronograma</a>
+  <a href="#materiales">Materiales</a>
+</div>
 
-Curso dictado en la Maestría en Economía (dECON -  FCS)
+<style>
+
+h1 {
+    display: none;
+  }
+  
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #FFFFFF;
+    margin: 0;
+    padding: 0;
+  }
+
+  .navbar {
+    background-color: #8a2be2; /* Código de color para violeta */
+    overflow: hidden;
+  }
+
+  .navbar a {
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+
+  .navbar a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+
+  /* Estilos para las secciones del documento */
+  h2 {
+    margin-top: 20px;
+  }
+</style>
+
+
+## Diseño e implementacion de experimentos en ciencias sociales <a name="informacion-general"></a>
+
+Curso dictado en la Maestría en Economía (dECON - FCS)
 
 Año 2023
 
-```{r, include = FALSE}
-knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>",
-  fig.path = "man/figures/README-",
-  out.width = "100%"
-)
-```
+***Santiago López-Cariboni***
 
-\scriptsize
-
-***Santiago López-Cariboni*** 
-
-- Email: santiago.lopez@cienciassociales.edu.uy
-- Web: [https://www.lopez-cariboni.info/](https://www.lopez-cariboni.info/)
+- Email: <santiago.lopez@cienciassociales.edu.uy>
+- Web: <https://www.lopez-cariboni.info/>
 - GitHub: [@lopez-cariboni](https://github.com/lopez-cariboni)
- 
-***Luciana Cantera*** 
 
-- Email: luciana.cantera@cienciassociales.edu.uy
+***Luciana Cantera***
+
+- Email: <luciana.cantera@cienciassociales.edu.uy>
 - GitHub: [@lucianacantera](https://github.com/lucianacantera)
 
 ***Lucía Suárez***
 
-- Email: lucia.suarez@cienciassociales.edu.uy
+- Email: <lucia.suarez@cienciassociales.edu.uy>
 - GitHub: [@luciasuarezferrer](https://github.com/luciasuarezferrer)
 
 ***Nicolás Schmidt***
 
-- Email: nschmidt@cienciassociales.edu.uy
-- Web: [https://dcp-nicolas.schmidt.edu.uy](https://cienciassociales.edu.uy/departamento-de-ciencia-politica/nicolas-schmidt/)
-- GitHub: [@Nicolas-Schmidt](https://github.com/Nicolas-Schmidt)    
+- Email: <nschmidt@cienciassociales.edu.uy>
+- Web:
+  [https://dcp-nicolas.schmidt.edu.uy](https://cienciassociales.edu.uy/departamento-de-ciencia-politica/nicolas-schmidt/)
+- GitHub: [@Nicolas-Schmidt](https://github.com/Nicolas-Schmidt)
 
-\normalsize
+## Descripcón <a name="descripcion"></a>
 
-## Descripcón
+Este curso abarca el diseño, la realización y el análisis de
+experimentos en ciencias sociales. Revisa los experimentos de campo,
+experimentos naturales, de encuesta y de laboratorio.
 
-Este curso abarca el diseño, la realización y el análisis de experimentos en ciencias sociales. Revisa los experimentos de campo, experimentos naturales, de encuesta y de laboratorio.
+## Programa <a name="programa"></a>
 
+El programa del curso está disponible
+[aquí](https://drive.google.com/u/0/uc?id=1P7wshzrPodf2tfPWMIRXo6YsI3zh0dMn&export=download).
 
-## Programa
+## Objetivos de aprendizaje: <a name="objetivos"></a>
 
-El programa del curso está disponible [aquí](https://drive.google.com/u/0/uc?id=1P7wshzrPodf2tfPWMIRXo6YsI3zh0dMn&export=download).
+- Cómo identificar y abordar las principales amenazas para los diseños
+  experimentales
+- Cómo implementar componentes clave del diseño y análisis experimental
+  en código
+- Cómo evaluar las opciones de diseño en sus propios experimentos a
+  través de la simulación
+- Adquirir experiencia replicando el diseño y análisis de experimentos
+  publicados destacados
+- Cómo diseñar un experimento y preparar un pre-registro completo
 
+## Bibliografía general <a name="bibliografia"></a>
 
-## Objetivos deaprendizaje:
+Gerber, Alan S., and Donald P. Green. 2012. *Field Experiments: Design,
+Analysis, and Interpretation.* New York: W.W. Norton. (FEDAI).
 
--   Cómo identificar y abordar las principales amenazas para los diseños experimentales
--   Cómo implementar componentes clave del diseño y análisis experimental en código
--   Cómo evaluar las opciones de diseño en sus propios experimentos a través de la simulación
--   Adquirir experiencia replicando el diseño y análisis de experimentos publicados destacados
--   Cómo diseñar un experimento y preparar un pre-registro completo
+Imbens, G. W., & Rubin, D. B. (2015). Causal inference in statistics,
+social, and biomedical sciences. Cambridge University Press. (CISSBS)
 
+Athey, Susan, and Guido W Imbens. 2017. “The Econometrics of Randomized
+Experiments.” In Handbook of Economic Field Experiments, Elsevier,
+73–140. (ERE)
 
-## Bibliografía general 
+Blair, Graeme, Jasper Cooper, Alexander Coppock, y Macartan Humphreys.
+*Research Design in the Social Sciences Declaration, Diagnosis, and
+Redesign*. Forthcoming, Princeton University Press. (R3DR). Disponible
+online en:
 
-Gerber, Alan S., and Donald P. Green. 2012. *Field Experiments: Design, Analysis, and Interpretation.* New York: W.W. Norton. (FEDAI).
+Glennerster, Rachel, and Kudzai Takavarasha. 2013. *Running Randomized
+Evaluations: A Practical Guide*. Princeton: Princeton UP.(RRE)
 
-Imbens, G. W., & Rubin, D. B. (2015). Causal inference in statistics, social, and biomedical sciences. Cambridge University Press. (CISSBS)
+Jake Bowers, Maarten Voors, and Nahomi Ichino. Traducido por Lily
+Medina, [La teoría y la práctica de los experimentos de campo: Una
+introducción de los Learning Days de
+EGAP](https://lilymedina.github.io/theory_and_practice_of_field_experiments/)
 
-Athey, Susan, and Guido W Imbens. 2017. “The Econometrics of Randomized Experiments.” In Handbook of Economic Field Experiments, Elsevier, 73–140. (ERE)
+La literatura del curso está disponible
+[aquí](https://drive.google.com/drive/folders/154rb3NLmaPQQB8L9xvvFmakDQ1wMudYQ?usp=sharing)
 
-Blair, Graeme, Jasper Cooper, Alexander Coppock, y Macartan Humphreys. *Research Design in the Social Sciences Declaration, Diagnosis, and Redesign*.  Forthcoming, Princeton University Press. (R3DR). Disponible online en: \url{https://book.declaredesign.org/}
-
-Glennerster, Rachel, and Kudzai Takavarasha. 2013. *Running Randomized Evaluations: A Practical Guide*. Princeton: Princeton UP.(RRE)
-
-Jake Bowers, Maarten Voors, and Nahomi Ichino. Traducido por Lily Medina, [La teoría y la práctica de los experimentos de campo:
-Una introducción de los Learning Days de EGAP](https://lilymedina.github.io/theory_and_practice_of_field_experiments/)
-
-
-La literatura del curso está disponible [aquí](https://drive.google.com/drive/folders/154rb3NLmaPQQB8L9xvvFmakDQ1wMudYQ?usp=sharing)
-
-
-
-
-
-## Cronograma
+## Cronograma <a name="cronograma"></a>
 
 ```{r, results='asis', echo=FALSE}
 
@@ -101,7 +148,7 @@ for (i in 1:filas) {
 }
 ```
 
-## Materiales del Curso
+## Materiales del Curso <a name="materiales"></a>
 
 ```{r, results='asis', echo=FALSE}
 
