--- a/README.Rmd
+++ b/README.Rmd
@@ -122,7 +122,7 @@ for (i in 1:filas) {
 
 
 
-```{r, results='asis', echo=FALSE, eval=FALSE}
+```{r, results='asis', echo=FALSE, eval=TRUE}
 ## Materiales del Curso <a name="materiales"></a>
 datos <- rio::import("Clases.xlsx")
 filas <- nrow(datos)
@@ -138,7 +138,7 @@ for (i in 1:filas) {
 ```
 
 
-```{r echo=FALSE, warning=FALSE, message=FALSE, escape = FALSE}
+```{r echo=FALSE, warning=FALSE, message=FALSE, escape = FALSE, eval=FALSE}
 library(gt)
 library(tidyverse)
 library(readxl)
