--- a/README.Rmd
+++ b/README.Rmd
@@ -122,7 +122,7 @@ for (i in 1:filas) {
 
 
 
-```{r, results='asis', echo=FALSE, eval=TRUE}
+```{r, results='asis', echo=FALSE, eval=FALSE}
 ## Materiales del Curso <a name="materiales"></a>
 datos <- rio::import("Clases.xlsx")
 filas <- nrow(datos)
@@ -138,16 +138,22 @@ for (i in 1:filas) {
 ```
 
 
-```{r echo=FALSE, warning=FALSE, message=FALSE, escape = FALSE, eval=FALSE}
+```{r echo=FALSE, warning=FALSE, message=FALSE, escape = FALSE, eval=TRUE}
 library(gt)
 library(tidyverse)
 library(readxl)
 
 url <- "https://docs.google.com/spreadsheets/d/1DOO5tUWOpI2laLfvPuAPzlN2dWzgnr3-/export?format=xlsx"
-temp <- tempfile(fileext = ".xlsx")
-download.file(url, destfile = temp, mode = "wb")
-data <- read_excel(temp)
-unlink(temp)
+#temp <- tempfile(fileext = ".xlsx")
+#download.file(url, destfile = temp, mode = "wb")
+#data <- read_excel(temp)
+#unlink(temp)
+
+
+destfile <- file.path(getwd(), "archivo_descargado.xlsx")
+download.file(url, destfile = destfile, mode = "wb")
+data <- read_excel(destfile)
+
 
 
 
