--- a/README.Rmd
+++ b/README.Rmd
@@ -1,6 +1,8 @@
 ---
-output: html_document
+output:
+  github_document:
 ---
+
 
 <div class="navbar">
   <a href="#informacion-general">Información General</a>
