--- a/README.Rmd
+++ b/README.Rmd
@@ -90,7 +90,7 @@ experimentos naturales, de encuesta y de laboratorio.
 ## Programa <a name="programa"></a>
 
 El programa del curso está disponible
-[aquí](https://drive.google.com/u/0/uc?id=1P7wshzrPodf2tfPWMIRXo6YsI3zh0dMn&export=download).
+[aquí](https://drive.usercontent.google.com/u/0/uc?id=1_bkckjFeLewCReAIZp4suzUcUrQH1Jqk&export=download).
 
 ## Objetivos de aprendizaje: <a name="objetivos"></a>
 
